--- a/project.css
+++ b/project.css
@@ -12,9 +12,9 @@ display:inline-block;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .navbar{
-background-image: url(./images/images1.jpeg);
+background-image: url(./images1.jpeg);
 color:white;
-height:270px;
+height:400px;
 width:100%;
 }
 a,.headpart{
@@ -33,9 +33,10 @@ padding-left:15px;
 font-weight: bold;
 }
 .ul-li{
-margin-left:16%;
+margin-left:20%;
 }
 .headpart1{
+  margin-top: 50px;
 margin-left: 42%;
 font-size: 20px;
 }
@@ -50,7 +51,7 @@ margin-top: 20px;
 }
 .button-style{
 margin-left: 40%;
-margin-top: 30px;
+margin-top: 60px;
 padding: 8px 40px 8px 40px;
 border-radius: 200px 200px 0px 200px;
 }
@@ -98,15 +99,15 @@ float:left;
 }
 .headpart-3{
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-margin-top: 40px;
-margin-left:42%;
+margin-top: 70px;
+margin-left:60%;
 font-weight: bolder;
 font-size: 25px;
 }
 .button-style1{
 color: white;
 background-color: black;
-margin-left:9%;
+margin-left:22%;
 margin-top:5px;
 padding: 4px 20px 4px 20px;
 border-radius: 200px 200px 0px 200px;
@@ -115,7 +116,7 @@ border-radius: 200px 200px 0px 200px;
   height: 200px;
   width: 400px;
 margin-top: 20px;
-margin-left:45%;
+margin-left:55%;
 text-align:justify
 }
 /*work section coading*/
@@ -123,15 +124,17 @@ text-align:justify
 margin-top:40px;
 }
 .head_container{
-margin-left: 100px;
+margin-left:40px;
 }
 .head-3{
+  margin-bottom: 20px;
+  margin-top: 100px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
 }
 .layout_padding{
 display: flex;
 flex-wrap: wrap;
-margin-left: 40px;
+margin-left: 120px;
 margin-top: 30px;
 }
 .box-1{
@@ -161,14 +164,25 @@ margin-left:30%;
 height: 300px;
 width: 200px;
 margin-top:30px;
-border: 1px solid black;
 display:inline-block;
-margin-left: 40px;
-border: none;
+margin-left: 115px;
+padding: 10px;
+
 }
-.clint-section:hover{
+.clint-sec{
+  height: 300px;
+width: 200px;
+margin-top:30px;
+display:inline-block;
+margin-left: 115px;
+padding: 10px;
+box-shadow:10px 20px 20px 10px lightgray ;
+
+}
+.clint-section,.clint-sec:hover{
  background-color:wheat;
  opacity: 1.0;
+ transition: all 0.5s ease;
 }
 .photo{
 margin-top: 10px;
@@ -210,7 +224,6 @@ padding: 7px;
 border-radius: 50px;
 border-width: 1px;
 color: rgb(116, 108, 108);
-outline: none;
 }
 textarea{
 align-content: center;
@@ -221,7 +234,7 @@ padding: 10px;
 .button-1{
 background-color:rgb(244, 165, 20);
 margin-top: 20px;
-margin-left: 47%;
+margin-left: 42%;
 padding: 6px 25px 6px 25px;
 border-radius: 20px;
 font-size: 14px;
@@ -284,11 +297,6 @@ display: flex;
   background-color: black;
   color: white;
 }
-.last-sec{
+.laste-a{
   margin-left: 30%;
-  margin-right: 30%;
-}
-.last-sec1{
-  margin-left: 26%;
-  margin-right: 32%;
 }
